kubernetes/monitoring/ingress.yaml
---
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.efym.net`)
      kind: Rule
      middlewares:
        - name: authelia
          namespace: authelia
      services:
        - name: grafana
          port: 80
  tls:
    secretName: efym-net-tls
